<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我当家</string>
    <string name="action_settings">Settings</string>
    <string name="activity_register_prompt">请检查手机号码是否正确，如果正确但长时间没有收到验证码短信，可能是因为短信运营商的网络不太给力，请点击下面的按钮拨打客服电话。</string>
    <string name="phone_fast_login">手机号快速登录</string>
    <string name="title_activity_buy_index">Buy_index</string>
    <string name="my_income">我的收入</string>
    <string name="wait_send_goods">待发货</string>
    <string name="wait_pay">待付款</string>
    <string name="has_send">已发货</string>
    <string name="wait_evaluation">待评价</string>
    <string name="today_amount">今日成交额</string>
    <string name="today_order">今日订单数</string>
    <string name="refunding">退款中</string>
    <string name="stroe_manager">店铺管理</string>
    <string name="order_manager">订单管理</string>
    <string name="goods_manager">商品管理</string>
    <string name="contacts">联系人</string>
    <string name="message">消息</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="school">学校</string>
    <string name="buyer_credit">买家信誉度</string>
    <string name="seller_credit">卖家信誉度</string>
    <string name="shopping_cart">购物车</string>
    <string name="search_goods_store">搜索商品、店铺</string>
    <string name="title_activity_shopping_cart">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="userinfo">个人资料</string>
    <string name="user_login">用户登录</string>
    <string name="register">注册</string>
    <string name="clear">清空</string>
    <string name="title_activity_setting">MainActivity</string>
    <string name="setting">设置</string>
    <string name="edit">编辑</string>
    <string name="title_activity_settlement">Settlement</string>
    <string name="title_activity_item_details">商品详情</string>
    <string name="title_activity_goods_manager">GoodsManager</string>
    <string name="add_goods">新增商品</string>
    <string name="title_activity_add_goods">AddGoodsActivity</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="cancle">取消</string>
    <string name="title_activity_index_search">搜索界面</string>
    <string name="search">搜索</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="off_shelf">下架</string>
    <string name="on_shelf">上架</string>
    <string name="preview">预览</string>
    <string name="load_more_comment">加载更多评论</string>
    <string name="collect">收藏</string>
    <string name="store">店铺</string>
    <string name="boss">客服</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="now_buy">立即购买</string>
    <string name="title">标题</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_nomore">没有更多的数据</string>
    <string name="onsale">出售中</string>
    <string name="offshelf">已下架</string>
    <string name="authentication">实名认证</string>
    <string name="delivery">减库存方式</string>
    <string name="store_create_time">店铺创建时间</string>
    <string name="change_store_logo">更换店标</string>
    <string name="store_credit">店铺信誉度</string>
    <string name="ok">确定</string>
    <string name="express">物流信息</string>
    <string name="title_wallet_top">我的钱包</string>
    <string name="wallet_balance">我的余额</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="wallet_money_recharge">充值</string>
    <string name="wallet_money_withdraw">提现</string>
    <string name="wallet_mybank">我的银行卡</string>
    <string name="wallet_pay_pasd">支付密码</string>
    <string name="wallet_detail">账单</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_address_top">管理收货地址</string>
    <string name="address_add_btn">新增收货地址</string>
    <string name="title_activity_address_add">AddressAddActivity</string>
    <string name="title_address_add_top">新建收货地址</string>
    <string name="title_address_add_child">新建收货地址</string>
    <string name="address_receive_name">姓名：</string>
    <string name="address_receive_phone">电话：</string>
    <string name="address_receive_sheng">省份：</string>
    <string name="address_receive_shi">城市：</string>
    <string name="address_receive_qu">地区：</string>
    <string name="address_receive_xiangxidizhi">地址：</string>
    <string name="address_submit_button">保存并使用</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_order_top">我的订单</string>
    <string name="order_list_all">全部</string>
    <string name="order_list_daifukuan">待付款</string>
    <string name="order_list_daifahuo">待发货</string>
    <string name="order_list_daishouhuo">待收货</string>
    <string name="order_list_daipingjia">待评价</string>
    <string name="order_list_tuihuanshangpin">申请退换</string>
    <string name="title_activity_my_collection">MyCollectionActivity</string>
    <string name="title_collection_top">我的收藏</string>
    <string name="collection_goods">商品</string>
    <string name="collection_shop">店铺</string>
    <string name="setting_pic">图片设置</string>
    <string name="setting_clean">清除缓存</string>
    <string name="setting_suggest">意见反馈</string>
    <string name="setting_edition">版本更新</string>
    <string name="setting_about">关于我们</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_history_top">浏览记录</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_bundling">BundlingActivity</string>
    <string name="title_phone_top">修改绑定手机号</string>
    <string name="title_pwd_top">修改密码</string>
    <string name="pwd_old">当前密码</string>
    <string name="pwd_new">新密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="pwd_submit">确认修改</string>
    <string name="title_wallet_recharge">账户充值</string>
    <string name="title_order_det">订单详情</string>
    <string name="button_search">查询</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="save">保存</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="store_detile">店铺详情</string>
    <string name="hassend">已发货</string>
    <string name="hasclose">已关闭</string>
    <string name="title_activity_buy_order">BuyOrderActivity</string>
    <string name="refund">退款中</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="submit_comment">提交评价</string>
    <string name="comment_goods">评价商品</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_strart">StrartActivity</string>
    <string name="add_address">新增收货地址</string>
    <string name="title_activity_search_store_result">SearchStoreResultActivity</string>
    <string name="sharetofriend">分享好友</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="feedback">意见反馈</string>
    <string name="goods">商品</string>
    <string name="change_password">修改密码</string>
    <string name="change_bundphone">更换绑定手机</string>
    <string name="about_us">关于我们</string>
    <string name="title_activity_my_income">MyIncomeActivity</string>
    <string name="history_income">历史成交额</string>

</resources>