<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/item_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_img"
            android:text="商品标题" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_toRightOf="@id/item_img"
            android:text="价格" />

        <TextView
            android:id="@+id/item_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:layout_toRightOf="@id/item_img"
            android:text="销量" />

        <TextView
            android:id="@+id/item_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/item_sales"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/item_sales"
            android:text="收藏" />

        <TextView
            android:id="@+id/item_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_sales"
            android:layout_toRightOf="@id/item_img"
            android:text="库存" />

        <TextView
            android:id="@+id/item_addtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/item_collect"
            android:layout_alignTop="@id/item_stock"
            android:text="添加" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/onsale_or_offsale"
            style="@style/goods_manager_item_button"
            android:text="@string/off_shelf" />

        <Button
              android:id="@+id/preview"
            style="@style/goods_manager_item_button"
            android:text="@string/preview" />

        <Button
            android:id="@+id/edit"
            style="@style/goods_manager_item_button"
            android:text="@string/edit" />

        <Button
             android:id="@+id/delete"
            style="@style/goods_manager_item_button"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>